...
              },
            ),
            if (isAdmin)
              ListTile(
                key:const ValueKey('administracion'),
                leading: Icon(Icons.admin_panel_settings, color: Colors.white),
                title: Text('Administración', style: TextStyle(color: Colors.white)),
                onTap: () {
                  Navigator.push(
                    context,
                    MaterialPageRoute(builder: (context) => AdminScreen()),
                  );
                },
...
